--- a/index.html
+++ b/index.html
@@ -4,16 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href="dom.css" rel="stylesheet">
-    <style>
-        .active{
-            background-color: red;
-            color: white;
-            width: 50%;
-            text-align: center;
-            font-size: 20px;
-        }
-        </style>
+    <link href="style.css" rel="stylesheet">
+  
 </head>
 <body>
    <div class="todolist">
@@ -27,7 +19,7 @@
 </div>
    
 </body>
-<script src="dom.js">
+<script src="script.js">
 
  
 </script>
